--- a/public/index.html
+++ b/public/index.html
@@ -15,39 +15,35 @@
     <!-- Footer with Multiple Columns -->
     <section>
       <h2>Footer w/ Multiple Columns</h2>
-      <footer class="box flex items-start">
+      <footer class="box py-6 px-4 flex items-start">
         <div>
           <img src="https://res.cloudinary.com/thirus/image/upload/v1628614672/logos/circleai_dm9slt.png" class="h-5 object-cover">
 
         </div>
+        <div class="px-4 text-sm ml-auto">
+          <h4 class="text-sky-800 font-bold">Quick Links</h4>
+          <ul class="leading-snug text-sm">
+            <li class="w-20 h-1 bg-gray-300 mt-6"></li>
+            <li class="w-20 h-1 bg-gray-300 mt-6"></li>
+            <li class="w-20 h-1 bg-gray-300 mt-6"></li>
+          </ul>
+        </div>        
         <div class="px-4 text-sm">
-          <h4 class="text-blue-700 font-semibold mb-1">Quick Links</h4>
-          <ul class="leading-snug">
-            <li class="text-sm">Link #1</li>
-            <li class="text-sm">Link #2</li>
-            <li class="text-sm">Link #3</li>
-            <li class="text-sm">Link #4</li>
+          <h4 class="text-sky-800 font-bold">Contact Us</h4>
+          <ul class="leading-snug text-sm">
+            <li class="w-20 h-1 bg-gray-300 mt-6"></li>
+            <li class="w-20 h-1 bg-gray-300 mt-6"></li>
+            <li class="w-20 h-1 bg-gray-300 mt-6"></li>
           </ul>
-        </div>
-        <div class="p-4 text-sm">
-          <h4 class="text-blue-700 font-semibold mb-1">Contact Us</h4>
-          <ul class="leading-snug">
-            <li class="text-sm">Link #1</li>
-            <li class="text-sm">Link #2</li>
-            <li class="text-sm">Link #3</li>
-            <li class="text-sm">Link #4</li>
+        </div>        
+        <div class="px-4 text-sm">
+          <h4 class="text-sky-800 font-bold">Social</h4>
+          <ul class="leading-snug text-sm">
+            <li class="w-20 h-1 bg-gray-300 mt-6"></li>
+            <li class="w-20 h-1 bg-gray-300 mt-6"></li>
+            <li class="w-20 h-1 bg-gray-300 mt-6"></li>
           </ul>
-        </div>
-        <div class="p-4 text-sm">
-          <h4 class="text-blue-700 font-semibold mb-1">Social</h4>
-          <ul class="leading-snug">
-            <li class="text-sm">Link #1</li>
-            <li class="text-sm">Link #2</li>
-            <li class="text-sm">Link #3</li>
-            <li class="text-sm">Link #4</li>
-          </ul>
-        </div>
-
+        </div>        
       </footer>
     </section>
 
@@ -60,7 +56,6 @@
         <span class="ml-auto bg-blue-50 px-py px-2 text-blue-500 font-semibold rounded-md">2</span>
       </div>
     </section>
-
 
     <!-- Flex Basis: Pricing Plan (better) -->
     <section>
