Complex Flex Card (Responsive)

--- a/public/flex-exercises.html
+++ b/public/flex-exercises.html
@@ -13,37 +13,39 @@
   </head>
   <body>
     <section>
-      <div class="card flex flex-col">
+      <div class="card flex flex-col md:flex-row">
         <figure class="flex-[40%]">
           <img
             src="https://res.cloudinary.com/thirus/image/upload/v1632854291/logos/drawers_gr2wn5.jpg"
             alt=""
           />
         </figure>
-        <div class="card-body flex-[60%]">
-          <h2 class="card__title">
-            Shift the overall look and feel by adding these wonderful touches to
-            furniture in your home
-          </h2>
-          <p>
-            Ever been in a room and felt like something was missing? Perhaps it
-            felt slightly bare and uninviting. I've got some simple tips to help
-            you make any room feel complete.
-          </p>
-        </div>
-        <div class="card-footer flex items-center">
-          <img
-            src="https://res.cloudinary.com/thirus/image/upload/v1632854290/logos/avatar-michelle_qcobnu.jpg"
-            class="author__avatar"
-          />
-          <div class="ml-2">
-            <p class="author__name">Michelle Appleton</p>
-            <span class="author__date">28 June 2020</span>
+        <div class="flex-[60%]">
+          <div class="card-body">
+            <h2 class="card__title">
+              Shift the overall look and feel by adding these wonderful touches
+              to furniture in your home
+            </h2>
+            <p>
+              Ever been in a room and felt like something was missing? Perhaps
+              it felt slightly bare and uninviting. I've got some simple tips to
+              help you make any room feel complete.
+            </p>
           </div>
-          <div class="share-icon ml-auto">
-            <a href="#">
-              <i class="fa-solid fa-share"></i>
-            </a>
+          <div class="card-footer flex items-center">
+            <img
+              src="https://res.cloudinary.com/thirus/image/upload/v1632854290/logos/avatar-michelle_qcobnu.jpg"
+              class="author__avatar"
+            />
+            <div class="ml-2">
+              <p class="author__name">Michelle Appleton</p>
+              <span class="author__date">28 June 2020</span>
+            </div>
+            <div class="share-icon ml-auto">
+              <a href="#">
+                <i class="fa-solid fa-share"></i>
+              </a>
+            </div>
           </div>
         </div>
       </div>
